kubernetes/apps/base/home-system/nextcloud/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: home-system
  annotations:
    external-dns.alpha.kubernetes.io/target: 'external.${CLUSTER_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - 'nextcloud.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: nextcloud
          port: 8080
          weight: 100
